val-vid div added + extra margin fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+body,div {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,8 +15,11 @@ code {
     monospace;
 }
 
+/*  *********   Navbar **************** */
+
 .navbar{
   /* border: 2px solid red; */
+  width: 100%;
   border-bottom: 1px aqua solid;
   text-align: center;
   display: flex;
@@ -46,6 +49,18 @@ justify-content: space-evenly;
   border: none;
 }
 
+/*  ******* Cinematic Valo video ************ */
+
+.vid-loop{
+  /* margin: ; */
+  /* padding: 10px; */
+  width: 100%;
+  height: 70vh;
+  border: 5px solid rgb(252, 177, 255);
+}
+
+
+/* ************  Footer ****************** */
 .footer{
   position: fixed;
   left: 0;
